# SnowSimulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: constant.h  environment.h  particle.h  particle_system.h  random.h  shader.h  stb_image.h
lib/: environment.cpp  glad.c  particle.cpp  particle_system.cpp  shader.cpp
shader/: shader.fs
